Minor CSS fix for footer image baseline alignment.

--- a/content/static/css/style.less
+++ b/content/static/css/style.less
@@ -451,6 +451,10 @@ div#flattr {
 	}
 
 	img {
+		vertical-align: middle;
+	}
+
+	img#_flattrwhite {
 		vertical-align: baseline;
 		position: relative;
 		top: 1px;
